--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    
+    <!-- I put these ones too -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="../src/assets/css/templatemo-chain-app-dev.css">
+    <link rel="stylesheet" href="../src/assets/css/animated.css">
+    <link rel="stylesheet" href="../src/assets/css/owl.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Blockmec Technology</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +49,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- I put these ones here -->
+    <script src="../src/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="../src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/assets/js/owl-carousel.js"></script>
+    <script src="../src/assets/js/animation.js"></script>
+    <script src="../src/assets/js/imagesloaded.js"></script>
+    <script src="../src/assets/js/popup.js"></script>
+    <script src="../src/assets/js/custom.js"></script>
+
   </body>
 </html>
